--- a/package.json
+++ b/package.json
@@ -11,14 +11,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.0",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.0",
     "@angular/compiler": "^15.2.0",
     "@angular/core": "^15.2.0",
     "@angular/forms": "^15.2.0",
+    "@angular/material": "^15.2.9",
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
+    "@ionic/angular": "^7.2.3",
+    "bootstrap": "^5.3.1",
+    "ionicons": "^7.1.2",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.7.22",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
   },
